#703: Fixed layout issues with image selector. Improved thumbnail creation.

--- a/modules/client-gwt/src/main/resources/ccc/contentcreator/public/listview.css
+++ b/modules/client-gwt/src/main/resources/ccc/contentcreator/public/listview.css
@@ -13,13 +13,15 @@
 #images-view .thumb{
 	background: #dddddd;
 	padding: 3px;
+	height: 200px;
+    width: 200px;
 }
-#images-view .thumb img{
-	height: 60px;
-	width: 80px;
-}
+
 #images-view .thumb-wrap{
+	height: 218px;
+    width: 206px;
 	float: left;
+	position:relative;
 	margin: 4px;
 	margin-right: 0;
 	padding: 5px;
@@ -32,12 +34,11 @@
 
 #images-view .x-view-over{
     border:1px solid #dddddd;
-    background: #efefef url(../images/default/grid/row-over.gif) repeat-x left top;
+    background: #efefef url(/static/gxt/2.0.4/images/default/grid/row-over.gif) repeat-x left top;
 	padding: 4px;
 }
 
 #images-view .x-view-selected{
-	background: #eff5fb url(images/selected.gif) no-repeat right bottom;
 	border:1px solid #99bbe8;
 	padding: 4px;
 }
@@ -47,7 +48,7 @@
 
 #images-view .loading-indicator {
 	font-size:11px;
-	background-image:url('../resources/images/default/grid/loading.gif');
+	background-image:url('/static/gxt/2.0.4/resources/images/default/grid/loading.gif');
 	background-repeat: no-repeat;
 	background-position: left;
 	padding-left:20px;
